--- a/setup.yml
+++ b/setup.yml
@@ -1,9 +1,17 @@
 ---
-- hosts: pi
+- hosts: pi4
   vars:
-    foo: bar
+    pip_package: python3-pip
+    pip_install_packages:
+      - name: docker
   remote_user: pi
   roles:
     - basic
-    - timemachine
-    - media
+    - { role: geerlingguy.pip, become: yes, tags: ["docker"] }
+    - { role: geerlingguy.docker_arm, become: yes, tags: ["docker"] }
+    - { role: portainer, become: yes, tags: ["docker", "portainer"] }
+
+    - { role: timemachine, become: yes, tags: ["tm"] }
+    - { role: homeassistant, become: yes, tags: ["ha"] }
+
+    #- media
