--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -12,6 +12,6 @@
       - portainer_data:/data
     ports:
       - "8000:8000"
-      - "9000:9000"
+      - "{{ portainer_http_port }}:9000"
     restart_policy: always
     pull: yes
