--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -20,7 +20,7 @@
             TZ: 'Europe/Berlin'
             ServerIP: '{{ ansible_default_ipv4.address }}'
             PIHOLE_DNS_: '{{ router_ip }}'
-            DNS_BOGUS_PRIV: "true"
+            DNS_BOGUS_PRIV: "false"
             DNS_FQDN_REQUIRED: "false"
             REV_SERVER: "false"
             DHCP_ACTIVE: "false"
