--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -1,7 +1,25 @@
+- name: create ha user
+  user:
+    name: "ha"
+  register: ha_user
+
+- name: Allow conbee with non-root user
+  template:
+    src: 50-ttyacm.rules
+    dest: /etc/udev/rules.d/50-ttyacm.rules
+    owner: root
+    group: root
+  notify: reload udev rules
+
+- name: Checkout ha docker venv hack
+  ansible.builtin.git:
+    repo: 'https://github.com/tribut/homeassistant-docker-venv'
+    dest: /media/Medien/home-assistant/docker
+
 - name: Reposess homeassistant config folder
   ansible.builtin.file:
     path: /media/Medien/home-assistant
-    owner: nobody
+    owner: ha
     group: users
     recurse: yes
 
@@ -17,14 +35,29 @@
           image: "ghcr.io/home-assistant/raspberrypi4-homeassistant:stable"
           volumes:
             - /media/Medien/home-assistant:/config
+            - "/media/Medien/home-assistant/docker/run:/etc/services.d/home-assistant/run"
             - /etc/localtime:/etc/localtime:ro
           restart: unless-stopped
           privileged: true
+          cap_add:
+            - NET_RAW
+            - NET_ADMIN
           network_mode: host
+          environment:
+            - PUID={{ha_user.uid}}
+            - PGID={{ha_user.group}}
+            - UMASK=007
+            - PACKAGES=sudo libcap
   register: output
 
-- ansible.builtin.debug:
-    var: output
+#- ansible.builtin.debug:
+#    var: output
+
+- name: enable non-root ble in containenr
+  community.docker.docker_container_exec:
+    user: root
+    container: homeassistant
+    command: setcap cap_net_raw,cap_net_admin+eip /usr/local/lib/python3.9/site-packages/bluepy/bluepy-helper
 
 - ansible.builtin.assert:
     that:
