--- a/roles/timemachine/templates/smb.conf
+++ b/roles/timemachine/templates/smb.conf
@@ -3,7 +3,7 @@ log file = /var/log/samba.%m
 max log size = 1000
 log level = 1
 map to guest = bad user
-guest account = nobody
+guest account = tm
 min protocol = SMB2
 
 vfs objects = catia fruit streams_xattr
