Add nodered and improve config folder setup

--- a/roles/caddy/templates/Caddyfile
+++ b/roles/caddy/templates/Caddyfile
@@ -13,6 +13,11 @@ http://portainer.lan {
         log
 }
 
+http://nodered.lan {
+        reverse_proxy {{ ansible_default_ipv4.address }}:{{ nodered_http_port }}
+        log
+}
+
 http://pi.hole {
         reverse_proxy {{ ansible_default_ipv4.address }}:{{ pihole_http_port }}
         log
