--- a/setup.yml
+++ b/setup.yml
@@ -9,8 +9,13 @@
     portainer_http_port: 9000
     homeassistant_http_port: 8123
     nodered_http_port: 1880
+    mosquitto_port: 1883
+    mosquitto_websockets_port: 9001
     homeassistant_config_folder: "/media/Medien/home-assistant"
     nodered_config_folder: "/media/Medien/node-red"
+    mosquitto_config_folder: "/media/Medien/mosquitto/config"
+    mosquitto_data_folder: "/media/Medien/mosquitto/data"
+    mosquitto_log_folder: "/media/Medien/mosquitto/log"
 
   remote_user: pi
   roles:
