--- a/roles/timemachine/templates/smb.conf
+++ b/roles/timemachine/templates/smb.conf
@@ -36,3 +36,19 @@ public = yes
 browseable = yes
 writeable = yes
 guest only = yes
+force group = users
+
+obey pam restrictions = no
+inherit acls = no
+inherit owner = no
+inherit permissions = yes
+
+create mask = 664
+force create mode = 664
+security mask = 664
+force security mode = 664
+
+directory mask = 2775
+force directory mode = 2775
+directory security mask = 2775
+force directory security mode = 2775
