--- a/setup.yml
+++ b/setup.yml
@@ -8,6 +8,7 @@
     pihole_http_port: 81
     portainer_http_port: 9000
     homeassistant_http_port: 8123
+    vscode_http_port: 8443
     nodered_http_port: 1880
     mosquitto_port: 1883
     mosquitto_websockets_port: 9001
